# swagger.yaml
@@ -1135,7 +1135,36 @@ paths:
           required: true
           schema:
             $ref: '#/definitions/OrderCreateRequest'
+
   /v1/orders/{orderId}:
+    get:
+
+      summary: Get order by id
+      security:
+        - Bearer: [ ]
+      tags:
+        - Orders
+      operationId: GetOrder
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          description: order id
+          type: integer
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/Order"
+        404:
+          description: Not Found
+          schema:
+            type: string
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/SwaggerError"
+
     put:
       summary: Edit order by id
       security:
